--- a/src/QuickGrid/src/Microsoft.AspNetCore.Components.QuickGrid/Microsoft.AspNetCore.Components.QuickGrid.csproj
+++ b/src/QuickGrid/src/Microsoft.AspNetCore.Components.QuickGrid/Microsoft.AspNetCore.Components.QuickGrid.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>true</IsPackable>
     <IsShipping>true</IsShipping>
+    <AssemblyName>Microsoft.AspNetCore.Components.QuickGrid.Tweaked</AssemblyName>    
   </PropertyGroup>
 
   <ItemGroup>
